--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
     <script src="functions.js"></script>
     <script src="object.js"></script>
     <script src="string.js"></script>
