--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="functions.js"></script>
     <script src="object.js"></script>
     <script src="string.js"></script>
+    <script src="calculate.js"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
