--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="string.js"></script>
     <script src="calculate.js"></script>
     <script src="filter.js"></script>
+    <script src="closures.js"></script>
 </body>
 </html>
